Fixed several color contrast issues.

--- a/src/app/styles/material-theme.scss
+++ b/src/app/styles/material-theme.scss
@@ -27,32 +27,11 @@ $themes: (
       foreground: map-get(mat.$red-palette, 50),
     ),
   ),
-  light: (
-    material-theme: mat.define-light-theme($primary-palette, $accent-palette),
-    background: mat.$light-theme-background-palette,
-    foreground: mat.$light-theme-foreground-palette,
-    border: rgba(black, 0.12),
-    button-background: map-get(mat.$gray-palette, 300),
-    success: (
-      background: map-get(mat.$green-palette, 50),
-      foreground: map-get(mat.$green-palette, 600),
-    ),
-    info: (
-      background: map-get(mat.$blue-palette, 50),
-      foreground: map-get(mat.$blue-palette, 600),
-    ),
-    warning: (
-      background: map-get(mat.$orange-palette, 50),
-      foreground: map-get(mat.$orange-palette, 600),
-    ),
-    error: (
-      background: map-get(mat.$red-palette, 50),
-      foreground: map-get(mat.$red-palette, 600),
-    ),
-  ),
 );
 
 $theme: map-get($themes, dark);
+$foreground-light: white;
+$foreground-dark: rgba(black, 0.9);
 
 @include mat.core();
 @include mat.all-component-themes(map-get($theme, material-theme));
@@ -61,7 +40,7 @@ a {
   color: mat.get-color-from-palette($primary-palette, darker);
 
   &.secondary:not(.active):not(:hover) {
-    color: invert(map-get(map-get($theme, background), app-bar), 33%);
+    color: map-get(mat.$grey-palette, 500);
   }
 
   &:hover {
@@ -76,21 +55,11 @@ vr {
 
 mat-card,
 .mat-snack-bar-container {
-  &.success {
-    background: map-get(map-get($theme, success), background);
-    color: map-get(map-get($theme, success), foreground);
-  }
-  &.info {
-    background: map-get(map-get($theme, info), background);
-    color: map-get(map-get($theme, info), foreground);
-  }
-  &.warning {
-    background: map-get(map-get($theme, warning), background);
-    color: map-get(map-get($theme, warning), foreground);
-  }
-  &.error {
-    background: map-get(map-get($theme, error), background);
-    color: map-get(map-get($theme, error), foreground);
+  @each $status in success, info, warning, error {
+    &.#{$status} {
+      background: map-get(map-get($theme, $status), background);
+      color: map-get(map-get($theme, $status), foreground);
+    }
   }
 }
 
@@ -113,21 +82,43 @@ mat-toolbar {
 
       &:not(.active) {
         &:not(:hover) {
-          color: invert(map-get(map-get($theme, background), app-bar), 33%);
+          color: map-get(mat.$grey-palette, 500);
         }
       }
     }
   }
 }
 
-.mat-raised-button {
-  background: map-get($theme, button-background);
+.mat-button-base {
+  // background: map-get($theme, button-background);
+  // color: $foreground-light;
+  background: map-get(mat.$gray-palette, 400);
+
+  &,
+  &.mat-primary,
+  &.mat-accent,
+  &.mat-warn {
+    color: $foreground-dark;
+  }
+
+  &.mat-primary {
+    background: map-get(mat.$orange-palette, 400);
+  }
+  &.mat-accent {
+    background: map-get(mat.$orange-palette, 400);
+  }
+  &.mat-warn {
+    background: map-get(mat.$red-palette, 400);
+  }
 }
 
-.mat-raised-button.mat-accent,
 .mat-fab.mat-accent,
 .mat-mini-fab.mat-accent {
-  color: #fff;
+  color: $foreground-dark;
+}
+
+.mat-select .mat-select-placeholder {
+  color: rgba(white, 0.6);
 }
 
 .border,
@@ -136,8 +127,8 @@ mat-toolbar {
 }
 
 .mat-chip:not(.mat-basic-chip) {
-  background-color: invert(map-get(map-get($theme, background), card), 50%);
-  color: #fff;
+  background-color: invert(map-get(map-get($theme, background), card), 33%);
+  color: $foreground-light;
 }
 
 .mat-tooltip {
@@ -170,6 +161,16 @@ mat-card {
       .footer:not(.tab) {
         border-color: map-get(map-get($theme, foreground), divider);
       }
+    }
+  }
+}
+
+.mat-form-field.mat-form-field-hide-placeholder {
+  .mat-form-field-infix {
+    .mat-input-element::placeholder {
+      $color: map-get(map-get($theme, foreground), divider);
+      color: $color;
+      -webkit-text-fill-color: $color;
     }
   }
 }
